--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
-
-VITE_TRANSLATION_API_KEY=""
+VITE_TRANSLATION_API_KEY="dummy-api-key"
+WS_TOKEN="dummy-ws-token"
 SKIP_PREFLIGHT_CHECK=true
-WS_TOKEN=""
